--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@types/pg": "^8.11.11",
+		"dotenv": "^16.4.7",
+		"pg": "^8.13.1"
 	}
 }
