--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@types/pg": "^8.11.11",
 		"dotenv": "^16.4.7",
 		"pg": "^8.13.1"
