--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,16 @@
 name: speedrun
 
 services:
-  db:
+  postgres:
     build: 
       context: .
       dockerfile: postgres.Dockerfile
-    env_file:
-      - docker.env
-    container_name: speedrun-postgres
+    environment:
+      POSTGRES_DB: speedrun
+      POSTGRES_USER: postgres
+    container_name: postgres
     ports:
-      - "5432:5432"
+      - "5432"
     volumes:
       - data_sql:/var/lib/postgresql/data
     healthcheck:
@@ -18,16 +19,18 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
-  speedrun:
+  web:
     build: .
     ports:
       - "3000:3000"
-    env_file:
-      - docker.env
     depends_on:
-      db:
+      postgres:
         condition: service_healthy
         restart: true
+    environment:
+      - POSTGRES_DB=speedrun
+      - POSTGRES_USER=postgres
+      - POSTGRES_HOST=postgres
 
 volumes:
   data_sql:
