--- a/compose.yaml
+++ b/compose.yaml
@@ -34,7 +34,7 @@ services:
       - POSTGRES_DB=speedrun
       - POSTGRES_USER=postgres
       - POSTGRES_HOST=postgres
-      # - ORIGIN=http://localhost:3000
+      - ORIGIN=http://localhost:3000
 
 volumes:
   data_sql:
